Add endpoint URL validation